<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Autopage Deals</string>
    <string name="app_name_featured">Featured Deals</string>
    <string name="app_name_search">Search Deals</string>
    <string name="app_name_deal">Autopage Deal</string>
    <string name="app_name_stores">Store Locator</string>
    <string name="app_name_store_list">Autopage Stores</string>    
    <string name="app_name_store">Autopage Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvMapText">notetoself - This is where my map was :( see MapViewActivity.java</string>    
    <string name="splash_bg">Loading..</string>
    <string name="is_connected">Welkom</string>
    <string name="tvPriceSub">x 24 Months</string>
    <string name="tvNetwork">Voda/MTN/CellC</string>
    <string name="dealTitle">Deal Finder</string>
    <string name="dealDescription">Autopage DealFinder deal content</string>
    <string name="dealPriceTV">R10000.00</string>       
    <string name="next">Next</string>       
    
    <string name="action_featured_deals">Featured Deals</string>
    <string name="action_stores_list">List Stores</string>
    <string name="action_store_locator">Store Locator</string>
    <string name="action_search">Search</string>
    
    <string name="tvNames">Full Names</string>
    <string name="etNames">Mr Tshepo Tema</string>
    <string name="tvContactNumber">Contact Number</string>
    <string name="etContactNumber">0726562688</string>
    <string name="tvMessage">Message</string>
    <string name="etMessage">Sending</string>
    <string name="btSend">Send</string>
    <string name="btCancel">Cancel</string>
    
	<string-array name="prices_array">
        <item>Any</item>
	    <item>R200</item>
        <item>R300</item>
        <item>R400</item>
        <item>R500</item>
        <item>R600</item>
        <item>>R600</item>
    </string-array>    

    <string name="store_name">Store</string>
    <string name="store_tel">Tel</string>
    <string name="store_fax">Fax</string>
    <string name="store_email">Email</string>
    <string name="store_trade_hrs">Trading Hours</string>
    <string name="store_address">Address</string>
    <string name="store_distance">Distance</string>
    			
    
    
    <string name="app_tag">LocationUpdates</string>
    <string name="app_description">
        Displays current address and current or updated location using Location Services
    </string>

    <!-- User interface labels and strings -->

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    
</resources>
