<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/store_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
	    android:textColor="#0085cc"
        android:layout_marginLeft="24dp"
        android:text="@string/store_name" />

    <TextView
        android:id="@+id/store_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/store_name"
        android:layout_marginLeft="24dp"
        android:textSize="12sp"
        android:textColor="#0088bb"
        android:text="@string/store_tel" />

    <TextView
        android:id="@+id/store_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/store_name"
        android:layout_marginRight="20dp"
        android:text="@string/store_distance"
	    android:textColor="#0088bb"
        android:textSize="12sp" />
</RelativeLayout>