<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dealfinder.MapViewActivity" >

    <TextView
        android:id="@+id/tvNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNames" />

    <EditText
        android:id="@+id/etNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvNames"
        android:ems="10"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btSend"
        android:layout_centerHorizontal="true"
        android:text="@string/btCancel" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etContactNumber"
        android:layout_below="@+id/etContactNumber"
        android:layout_marginTop="30dp"
        android:text="@string/tvMessage" />

    <TextView
        android:id="@+id/tvContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNames"
        android:layout_below="@+id/etNames"
        android:layout_marginTop="17dp"
        android:text="@string/tvContactNumber" />

    <EditText
        android:id="@+id/etContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvContactNumber"
        android:layout_below="@+id/tvContactNumber"
        android:ems="10" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvMessage"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvContactNumber"
        android:layout_below="@+id/etMessage"
        android:layout_marginTop="26dp"
        android:text="@string/btSend" />

</RelativeLayout>